testsuite/tests/typing-layouts-block-indices/parsing_idx_bad_ident.compilers.reference
File "parsing_idx_bad_ident.ml", line 8, characters 13-14:
8 | let _ = (.foo(0))
                 ^
Error: Syntax error: A parenthesis here can only follow one of: 
  ".", ".L", ".l", ".n", ".:", ".:L", ".:l", ".:n", ".idx_imm", ".idx_mut".
